Interpreter/Query/QueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Query.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
//[System.CLSCompliant(false)]
public partial class QueryParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, SELECT=2, ORDER=3, BY=4, ASC=5, DESC=6, WHERE=7, FIRST=8, LAST=9, 
		NULLS=10, ALL=11, AS=12, DISTINCT=13, REGEXP=14, AND=15, OR=16, LPAREN=17, 
		RPAREN=18, LBRACE=19, RBRACE=20, LBRACK=21, RBRACK=22, SEMI=23, COMMA=24, 
		GT=25, LT=26, NOT=27, EQ=28, NEQ=29, LE=30, GE=31, ADD=32, SUB=33, MUL=34, 
		DIV=35, MOD=36, ID=37, INT=38, TRUE=39, FALSE=40, DOUBLE=41, WHITESPACE=42, 
		STRING=43;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_where_clause = 2, RULE_order_by_clause = 3, 
		RULE_order_item = 4, RULE_order = 5, RULE_nulls = 6, RULE_sel_item = 7, 
		RULE_sel_modifier = 8, RULE_cond_expr = 9, RULE_cond_expr_no_gt = 10, 
		RULE_and_expr = 11, RULE_and_expr_no_gt = 12, RULE_not_expr = 13, RULE_not_expr_no_gt = 14, 
		RULE_bool_expr = 15, RULE_bool_expr_no_gt = 16, RULE_basic_expr = 17, 
		RULE_fact_expr = 18, RULE_neg_expr = 19, RULE_term_expr = 20, RULE_identifier = 21, 
		RULE_string_const = 22, RULE_bool_const = 23, RULE_int_const = 24, RULE_double_const = 25, 
		RULE_expr_list = 26, RULE_expr_list_no_gt = 27, RULE_rel_op = 28, RULE_rel_op_no_gt = 29, 
		RULE_error = 30;
	public static readonly string[] ruleNames = {
		"program", "statement", "where_clause", "order_by_clause", "order_item", 
		"order", "nulls", "sel_item", "sel_modifier", "cond_expr", "cond_expr_no_gt", 
		"and_expr", "and_expr_no_gt", "not_expr", "not_expr_no_gt", "bool_expr", 
		"bool_expr_no_gt", "basic_expr", "fact_expr", "neg_expr", "term_expr", 
		"identifier", "string_const", "bool_const", "int_const", "double_const", 
		"expr_list", "expr_list_no_gt", "rel_op", "rel_op_no_gt", "error"
	};

	private static readonly string[] _LiteralNames = {
		null, "'error'", "'SELECT'", "'ORDER'", "'BY'", "'ASC'", "'DESC'", "'WHERE'", 
		"'FIRST'", "'LAST'", "'NULLS'", "'ALL'", "'AS'", "'DISTINCT'", "'REGEXP'", 
		null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'>'", 
		"'<'", "'!'", "'=='", "'!='", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
		"'%'", null, null, "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "SELECT", "ORDER", "BY", "ASC", "DESC", "WHERE", "FIRST", 
		"LAST", "NULLS", "ALL", "AS", "DISTINCT", "REGEXP", "AND", "OR", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "GT", 
		"LT", "NOT", "EQ", "NEQ", "LE", "GE", "ADD", "SUB", "MUL", "DIV", "MOD", 
		"ID", "INT", "TRUE", "FALSE", "DOUBLE", "WHITESPACE", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Query.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static QueryParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QueryParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QueryParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] SEMI() { return GetTokens(QueryParser.SEMI); }
		public ITerminalNode SEMI(int i) {
			return GetToken(QueryParser.SEMI, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; statement();
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEMI) {
				{
				{
				State = 63; Match(SEMI);
				State = 64; statement();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ITerminalNode SELECT() { return GetToken(QueryParser.SELECT, 0); }
		public Sel_itemContext[] sel_item() {
			return GetRuleContexts<Sel_itemContext>();
		}
		public Sel_itemContext sel_item(int i) {
			return GetRuleContext<Sel_itemContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(QueryParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(QueryParser.COMMA, i);
		}
		public Where_clauseContext where_clause() {
			return GetRuleContext<Where_clauseContext>(0);
		}
		public Order_by_clauseContext order_by_clause() {
			return GetRuleContext<Order_by_clauseContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(SELECT);
			State = 71; sel_item();
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 72; Match(COMMA);
				State = 73; sel_item();
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 79; where_clause();
				}
			}

			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDER) {
				{
				State = 82; order_by_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Where_clauseContext : ParserRuleContext {
		public ITerminalNode WHERE() { return GetToken(QueryParser.WHERE, 0); }
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where_clause; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhere_clause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Where_clauseContext where_clause() {
		Where_clauseContext _localctx = new Where_clauseContext(Context, State);
		EnterRule(_localctx, 4, RULE_where_clause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(WHERE);
			State = 86; cond_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Order_by_clauseContext : ParserRuleContext {
		public ITerminalNode ORDER() { return GetToken(QueryParser.ORDER, 0); }
		public ITerminalNode BY() { return GetToken(QueryParser.BY, 0); }
		public Order_itemContext[] order_item() {
			return GetRuleContexts<Order_itemContext>();
		}
		public Order_itemContext order_item(int i) {
			return GetRuleContext<Order_itemContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(QueryParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(QueryParser.COMMA, i);
		}
		public Order_by_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order_by_clause; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrder_by_clause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Order_by_clauseContext order_by_clause() {
		Order_by_clauseContext _localctx = new Order_by_clauseContext(Context, State);
		EnterRule(_localctx, 6, RULE_order_by_clause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(ORDER);
			State = 89; Match(BY);
			State = 90; order_item();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 91; Match(COMMA);
				State = 92; order_item();
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Order_itemContext : ParserRuleContext {
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public OrderContext order() {
			return GetRuleContext<OrderContext>(0);
		}
		public NullsContext nulls() {
			return GetRuleContext<NullsContext>(0);
		}
		public Order_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order_item; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrder_item(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Order_itemContext order_item() {
		Order_itemContext _localctx = new Order_itemContext(Context, State);
		EnterRule(_localctx, 8, RULE_order_item);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; cond_expr();
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				State = 99; order();
				}
			}

			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NULLS) {
				{
				State = 102; nulls();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderContext : ParserRuleContext {
		public ITerminalNode ASC() { return GetToken(QueryParser.ASC, 0); }
		public ITerminalNode DESC() { return GetToken(QueryParser.DESC, 0); }
		public OrderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderContext order() {
		OrderContext _localctx = new OrderContext(Context, State);
		EnterRule(_localctx, 10, RULE_order);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			_la = TokenStream.LA(1);
			if ( !(_la==ASC || _la==DESC) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NullsContext : ParserRuleContext {
		public ITerminalNode NULLS() { return GetToken(QueryParser.NULLS, 0); }
		public ITerminalNode FIRST() { return GetToken(QueryParser.FIRST, 0); }
		public ITerminalNode LAST() { return GetToken(QueryParser.LAST, 0); }
		public NullsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nulls; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNulls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NullsContext nulls() {
		NullsContext _localctx = new NullsContext(Context, State);
		EnterRule(_localctx, 12, RULE_nulls);
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; Match(NULLS);
				State = 108; Match(FIRST);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109; Match(NULLS);
				State = 110; Match(LAST);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sel_itemContext : ParserRuleContext {
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public Sel_modifierContext sel_modifier() {
			return GetRuleContext<Sel_modifierContext>(0);
		}
		public ITerminalNode AS() { return GetToken(QueryParser.AS, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public Sel_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_item; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSel_item(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Sel_itemContext sel_item() {
		Sel_itemContext _localctx = new Sel_itemContext(Context, State);
		EnterRule(_localctx, 14, RULE_sel_item);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ALL || _la==DISTINCT) {
				{
				State = 113; sel_modifier();
				}
			}

			State = 116; cond_expr();
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 117; Match(AS);
				State = 118; identifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sel_modifierContext : ParserRuleContext {
		public ITerminalNode ALL() { return GetToken(QueryParser.ALL, 0); }
		public ITerminalNode DISTINCT() { return GetToken(QueryParser.DISTINCT, 0); }
		public Sel_modifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_modifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSel_modifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Sel_modifierContext sel_modifier() {
		Sel_modifierContext _localctx = new Sel_modifierContext(Context, State);
		EnterRule(_localctx, 16, RULE_sel_modifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			_la = TokenStream.LA(1);
			if ( !(_la==ALL || _la==DISTINCT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Cond_exprContext : ParserRuleContext {
		public And_exprContext[] and_expr() {
			return GetRuleContexts<And_exprContext>();
		}
		public And_exprContext and_expr(int i) {
			return GetRuleContext<And_exprContext>(i);
		}
		public ITerminalNode[] OR() { return GetTokens(QueryParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(QueryParser.OR, i);
		}
		public ErrorContext error() {
			return GetRuleContext<ErrorContext>(0);
		}
		public Cond_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cond_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCond_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Cond_exprContext cond_expr() {
		Cond_exprContext _localctx = new Cond_exprContext(Context, State);
		EnterRule(_localctx, 18, RULE_cond_expr);
		int _la;
		try {
			State = 132;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LPAREN:
			case LBRACE:
			case LBRACK:
			case LT:
			case NOT:
			case SUB:
			case ID:
			case INT:
			case TRUE:
			case FALSE:
			case DOUBLE:
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 123; and_expr();
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==OR) {
					{
					{
					State = 124; Match(OR);
					State = 125; and_expr();
					}
					}
					State = 130;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 131; error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Cond_expr_no_gtContext : ParserRuleContext {
		public And_expr_no_gtContext[] and_expr_no_gt() {
			return GetRuleContexts<And_expr_no_gtContext>();
		}
		public And_expr_no_gtContext and_expr_no_gt(int i) {
			return GetRuleContext<And_expr_no_gtContext>(i);
		}
		public ITerminalNode[] OR() { return GetTokens(QueryParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(QueryParser.OR, i);
		}
		public ErrorContext error() {
			return GetRuleContext<ErrorContext>(0);
		}
		public Cond_expr_no_gtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cond_expr_no_gt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCond_expr_no_gt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Cond_expr_no_gtContext cond_expr_no_gt() {
		Cond_expr_no_gtContext _localctx = new Cond_expr_no_gtContext(Context, State);
		EnterRule(_localctx, 20, RULE_cond_expr_no_gt);
		int _la;
		try {
			State = 143;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LPAREN:
			case LBRACE:
			case LBRACK:
			case LT:
			case NOT:
			case SUB:
			case ID:
			case INT:
			case TRUE:
			case FALSE:
			case DOUBLE:
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134; and_expr_no_gt();
				State = 139;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==OR) {
					{
					{
					State = 135; Match(OR);
					State = 136; and_expr_no_gt();
					}
					}
					State = 141;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 142; error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class And_exprContext : ParserRuleContext {
		public Not_exprContext[] not_expr() {
			return GetRuleContexts<Not_exprContext>();
		}
		public Not_exprContext not_expr(int i) {
			return GetRuleContext<Not_exprContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(QueryParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(QueryParser.AND, i);
		}
		public And_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_and_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnd_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public And_exprContext and_expr() {
		And_exprContext _localctx = new And_exprContext(Context, State);
		EnterRule(_localctx, 22, RULE_and_expr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; not_expr();
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 146; Match(AND);
				State = 147; not_expr();
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class And_expr_no_gtContext : ParserRuleContext {
		public Not_expr_no_gtContext[] not_expr_no_gt() {
			return GetRuleContexts<Not_expr_no_gtContext>();
		}
		public Not_expr_no_gtContext not_expr_no_gt(int i) {
			return GetRuleContext<Not_expr_no_gtContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(QueryParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(QueryParser.AND, i);
		}
		public And_expr_no_gtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_and_expr_no_gt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnd_expr_no_gt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public And_expr_no_gtContext and_expr_no_gt() {
		And_expr_no_gtContext _localctx = new And_expr_no_gtContext(Context, State);
		EnterRule(_localctx, 24, RULE_and_expr_no_gt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153; not_expr_no_gt();
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 154; Match(AND);
				State = 155; not_expr_no_gt();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Not_exprContext : ParserRuleContext {
		public Bool_exprContext bool_expr() {
			return GetRuleContext<Bool_exprContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(QueryParser.NOT, 0); }
		public Not_exprContext not_expr() {
			return GetRuleContext<Not_exprContext>(0);
		}
		public Not_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_not_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryVisitor<TResult> typedVisitor = visitor as IQueryVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNot_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
